force-app/main/default/objects/Receipt_Details__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charges</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Charges__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Project_Charges__c.Applied_This_Charge_To_FA__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Project_Charges__c</referenceTo>
    <relationshipLabel>Receipt Details</relationshipLabel>
    <relationshipName>Receipt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>