force-app/main/default/objects/Receipt_Details__c/fields/Cheque_number_for_integration__c.field-meta.xml
<CustomField>
    <fullName>Cheque_number_for_integration__c</fullName>
    <formula>Receipts__r.Cheque_DD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cheque number for integration</label>
    <type>Text</type>
</CustomField>