force-app/main/default/objects/Receipt_Details__c/fields/Demand_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Demand_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand Invoice</label>
    <referenceTo>Demand_Invoice__c</referenceTo>
    <relationshipLabel>Receipt Details</relationshipLabel>
    <relationshipName>Receipt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>