force-app/main/default/objects/Receipt_Details__c/fields/Is_Cheque_Dishonour__c.field-meta.xml
<CustomField>
    <fullName>Is_Cheque_Dishonour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cheque Dishonour</label>
    <type>Checkbox</type>
</CustomField>