force-app/main/default/objects/Receipt_Details__c/fields/On_Account_Money__c.field-meta.xml
<CustomField>
    <fullName>On_Account_Money__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Account Money</label>
    <type>Checkbox</type>
</CustomField>