force-app/main/default/objects/Receipt_Details__c/fields/Receipts__c.field-meta.xml
<CustomField>
    <fullName>Receipts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipts</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Receipt Details</relationshipLabel>
    <relationshipName>Receipt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>