force-app/main/default/objects/Receipt_Details__c/fields/Standard_Customer_Pay_Plan_Detail__c.field-meta.xml
<CustomField>
    <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Customer Pay Plan Detail</label>
    <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
    <relationshipLabel>Receipt Details</relationshipLabel>
    <relationshipName>Receipt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>